# vgi-symbols

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: check-version.sh
crates/symbols-core/: Cargo.toml
crates/symbols-core/src/: demangle.rs  errors.rs  frame.rs  id.rs  lib.rs  state.rs
crates/symbols-core/src/cache/: manifest.rs  mod.rs
crates/symbols-core/src/module/: dwarf.rs  mod.rs  pdb.rs
crates/symbols-core/src/source/: local.rs  mod.rs
crates/symbols-core/tests/: cache_behavior.rs  dwarf_resolve.rs  fuzz_no_panic.rs
crates/symbols-core/tests/fixtures/: prog.c  prog2.c
crates/symbols-worker/: Cargo.toml
crates/symbols-worker/fuzz/: Cargo.toml
crates/symbols-worker/fuzz/fuzz_targets/: derive_id.rs  parse_module.rs  resolve_addr.rs
crates/symbols-worker/src/: catalog.rs  main.rs  meta.rs  schema.rs  state.rs  util.rs
crates/symbols-worker/src/scalar/: demangle.rs  function_name.rs  inline_frames.rs  mod.rs  symbolicate.rs  version.rs
crates/symbols-worker/src/table/: cache.rs  mod.rs  module_info.rs  resolve.rs  resolve_batch.rs  sources.rs
test/sql/: resolve.test  totality.test
test/symbols/: macho_compute.dwarf  macho_inline.dwarf
