[package]
name = "symbols-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker exposing native (DWARF/PDB) symbolication to DuckDB over Apache Arrow as a bulk SQL JOIN backed by a build-id-keyed debug-info cache"

[[bin]]
name = "symbols-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
symbols-core.workspace = true
serde.workspace = true
serde_json.workspace = true
log = "0.4"
env_logger = "0.11"
